# krakenpad-poc

./: .gitignore  CLAUDE.md  README.md
docs/: ANIMATIONS.md  ANIMATION_BINARY_FORMAT.md  ANIMATION_FORMAT.md  BOM.md  BOM_PRICED.md  DIGIKEY_SHOPPING_LIST.md  LED_OPTIONS.md  MASTER_PCB.md  MASTER_SCHEMATIC_PLAN.md  MODULAR_PANEL_COUNT.md  PANEL_CONFIG.md  PANEL_PCB.md  PANEL_PCB_LAYOUT_NOTES.md  PANEL_SCHEMATIC_PLAN.md  POTENTIAL_SMX_MCU_COMPAT.md  PRE_ORDER_CHECKLIST.md  PROTOTYPE_LED_LAYOUT.md  PROTOTYPE_WIRING.md  REVIEW_RESPONSES_2026-07-19.md  RS485_PROTOCOL.md  STATUS.md  STOCK_PANEL_CHIPS.md  STOCK_PANEL_PCB_MEASUREMENTS.md  STOCK_PANEL_REFERENCE.md  UNDERGLOW.md  USB_PROTOCOL.md
docs/archive/: LED_OPTIONS.md  POTENTIAL_SMX_MCU_COMPAT.md  PROTOTYPE_WIRING.md  REVIEW_RESPONSES_2026-07-19.md
firmware/master/: master.ino
firmware/master/usb_speed_test/: usb_speed_test.ino
firmware/panel/: main.py
firmware/panel/c/: CMakeLists.txt  main.c
hardware/master-pcb/: fp-lib-table  master-pcb-BOM.csv  master-pcb.kicad_dru  master-pcb.kicad_pcb  master-pcb.kicad_pro  master-pcb.kicad_sch  master-pcb.kicad_sym  sym-lib-table
hardware/master-pcb/3dmodels/: 0436500300.stp  README.md
hardware/master-pcb/master-pcb.pretty/: Teensy40_Socketed.kicad_mod  TerminalBlock_MRR52-5.08-2P.kicad_mod  TerminalBlock_Molex_39531_1x09_P5.08mm_Vertical.kicad_mod
hardware/panel-pcb/: fp-lib-table  panel-pcb.kicad_dru  panel-pcb.kicad_pcb  panel-pcb.kicad_pro  panel-pcb.kicad_sch  panel-pcb.kicad_sym  sym-lib-table
tools/: fsr_monitor.py  usb_speed_test.py
(+10 files in other folders)
